[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ok-dmd"
version = "0.1.0"
description = "Online Koopman Dynamic Mode Decomposition (OK-DMD) for query-agnostic, mathematically grounded KV-cache eviction in long-context LLMs."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "UnK Center Inc."}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "numpy>=1.22.0",
]

[project.urls]
Homepage = "https://github.com/unkcenter/ok-dmd"
Repository = "https://github.com/unkcenter/ok-dmd"

[tool.setuptools.packages.find]
where = ["."]
include = ["ok_dmd*"]
